updated .desc styling to prevent overlapping on screen resizing

--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,7 @@ label {
   font-family: 'Karla', sans-serif;
   font-size: 18px;
   font-weight: 500;
-  line-height: 0em;
-  text-align: left;
+  line-height: 1em;
 }
 
 .menu-title {
@@ -269,7 +268,6 @@ select {
 .restaurant-desc{
   width: 50%;
   padding: 2em;
-  flex-basis: 1;
 }
 
 .menu {
